
 - Updated `docs/*.txt`: add asciidoc comments with links to nut-website
   rendered contents of most interesting pages. [#3095]

 - Added a `make dist-docs` goal to generate, collect and tarball all document
   types (man, html-single, html-chunked, pdf) that we may have enabled for the
   current build configuration and available tooling. [#1400]

 - Source directory `data/html` was renamed to `data/htmlcgi` in order to
   better reflect its contents and purpose, compared to documentation-oriented
   `html*` directories (and recipe variable names). This may impact some
   packaging recipes which do not rely on `make install` alone. [#3049]

 - Dropped the `compile` script from Git sources. It originates from automake
   and is added to work area (if missing) during `autogen.sh` rituals anyway.
   It is still distributed as part of `make dist` tarball. [#1209]

 - Default `PIDPATH` is now more strictly `/var/run`, unless building on a
   system conforming to FHS-3.0 standard where that location is absent or
   is a symlink, while `/run` exists and is a true directory. [#3099]

 - Revised CI and deliverable scripts, and Makefile recipes, to not use
   the verbatim `grep -E` (loudly preferred by newer systems, but may be
   absent on older ones) after all, nor use `egrep` (loudly disliked by
   newer systems). Instead, use what `configure` script detected for the
   generated files (or ones made from templates), and use a similar
   detection in standalone scripts. Also revised the use of `grep -q`,
   `id -u`, `diff -u`, etc. which are not ubiquitous, and of `test -e`
   which is not only absent in some older shells, but can cause them to
   abort processing the script immediately. Also the `if ! condition`
   syntax is not supported everywhere (or the `!` operator generally).
   [#3099, #1660]

 - The NUT Integration Testing suite (NIT) script, if started as `root`,
   can now consult its run-time situation vs. `BUILTIN_RUN_AS_USER` and